tests/fails/f8.t
if not require("fail") then return end

terra foo() : {int,1} 
end
foo()
